# grimes

./: .gitignore  README.md  check_types.sh  eslint.config.ts  grimes.test.ts  grimes.ts  grimes_mcp.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: check-types.yml
